# kritis3m_applications

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kritis3m_application_config.h.in
common/: CMakeLists.txt
common/include/: application_config.h  cli_parsing.h  file_io.h  io.h  l2_util.h  log_buffer.h  logging.h  networking.h  poll_set.h  threading.h  timing_metrics.h  wolfssl.h
common/include/secure_element/: atos_pkcs11.h  wolfssl_pkcs11_pqc.h
common/include/secure_element/pkcs11/: pkcs11.h
common/src/: cli_parsing.c  file_io.c  io.c  l2_util.c  log_buffer.c  logging.c  networking.c  poll_set.c  threading.c  timing_metrics.c  wolfssl.c
common/src/secure_element/: secure_element.c  wolfssl_pkcs11_pqc.c
echo_server/: CMakeLists.txt  README.md
echo_server/include/: echo_server.h
echo_server/src/: echo_server.c
http/: CMakeLists.txt
http/include/: hb_service.h  http_client.h  http_method.h  http_parser.h  http_parser_state.h  http_parser_url.h  kritis3m_application_manager.h  kritis3m_configuration.h  kritis3m_distribution_service.h  kritis3m_scale_service.h  utils.h
http/libs/: CMakeLists.txt
http/libs/include/: cJSON.h  cJSON_Utils.h  http_client.h  http_method.h  http_parser.h  http_parser_url.h  linux_comp.h
http/libs/src/: cJSON.c  http_client.c  http_parser.c  http_parser_url.c  linux_comp.c
http/management_server/: CMakeLists.txt
http/management_server/include/: configuration_parser.h  crypto_parser.h  hb_service.h  http_service.h  kritis3m_application_manager.h  kritis3m_configuration.h  kritis3m_distribution_service.h  kritis3m_scale_service.h  mgmt_certs.h  utils.h
http/management_server/src/: configuration_parser.c  crypto_parser.c  hb_service.c  http_service.c  kritis3m_application_manager.c  kritis3m_configuration.c  kritis3m_distribution_service.c  kritis3m_scale_service.c  utils.c
http/src/: hb_service.c  http_client.c  http_parser.c  http_parser_url.c  kritis3m_application_manager.c  kritis3m_distribution_service.c  kritis3m_scale_service.c
http_lib/: CMakeLists.txt
http_lib/include/: cJSON.h  http_client.h  http_parser.h  http_parser_state.h  http_parser_url.h  linux_comp.h
http_lib/src/: cJSON.c  cJSON_Utils.c  http_client.c  http_parser.c  http_parser_url.c  linux_comp.c
include/: logging.h  networking.h  tls_echo_server.h  tls_proxy.h  wolfssl.h
include/secure_element/: secure_element.h
include/secure_element/pkcs11/: pkcs11f.h  pkcs11t.h
kritis3m_http_lib/: CMakeLists.txt
kritis3m_http_lib/cmake/: kritis3m-http-libs-config.cmake.in
kritis3m_http_lib/include/: http_client.h
kritis3m_http_lib/src/: cJSON_Utils.c  http_client.c  http_parser.c  http_parser_url.c
kritis3m_quest/: CMakeLists.txt
kritis3m_quest/cmake/: kritis3m-quest-config.cmake.in
kritis3m_quest/include/: quest.h
kritis3m_quest/src/: kritis3m_http_request.c
l2_bridge/: CMakeLists.txt
l2_bridge/include/: l2_bridge.h  packet_socket.h
l2_bridge/src/: l2_bridge.c  packet_socket.c
l2_gateway/: CMakeLists.txt
l2_gateway/include/: dtls_socket.h  l2_gateway.h  packet_socket.h  tap_interface.h  udp_socket.h
l2_gateway/src/: dtls_socket.c  l2_gateway.c  packet_socket.c  tap_interface.c  udp_socket.c
management_service/: CMakeLists.txt  README.md
management_service/include/: asl_helper.h  configuration_manager.h  configuration_parser.h  control_plane_conn.h  ipc.h  kritis3m_application_manager.h  kritis3m_configuration.h  kritis3m_scale_service.h  pki_client.h
management_service/libs/: CMakeLists.txt
management_service/libs/include/: http_client.h  http_parser.h  http_parser_url.h
management_service/libs/src/: http_client.c  http_parser.c
management_service/service/: CMakeLists.txt
management_service/service/include/: configuration_parser.h  http_service.h  kritis3m_application_manager.h  kritis3m_configuration.h  kritis3m_scale_service.h  mgmt_certs.h  utils.h
management_service/service/src/: configuration_parser.c  http_service.c  kritis3m_application_manager.c  kritis3m_configuration.c  kritis3m_scale_service.c
management_service/src/: asl_helper.c  configuration_manager.c  configuration_parser.c  control_plane_conn.c  http_service.c  ipc.c  kritis3m_application_manager.c  kritis3m_configuration.c  kritis3m_scale_service.c  pki_client.c
network_tester/: CMakeLists.txt  README.md
network_tester/include/: network_tester.h
network_tester/src/: network_tester.c
quest_lib/: CMakeLists.txt  readme.md
quest_lib/include/: kritis3m_http.h  kritis3m_http_request.h  quest.h
quest_lib/src/: kritis3m_http_request.c  kritis3m_http_response.c  quest.c  quest_endpoint.c  quest_transaction.c
quest_lib/src/private_include/: quest_types.h
src/: logging.c  networking.c  poll_set.c  secure_element.c  tls_echo_server.c  tls_proxy.c  wolfssl.c
src/secure_element/: wolfssl_pkcs11_pqc.c
tcp_client_stdin_bridge/: CMakeLists.txt  README.md
tcp_client_stdin_bridge/include/: tcp_client_stdin_bridge.h
tcp_client_stdin_bridge/src/: tcp_client_stdin_bridge.c
tcp_echo_server/: CMakeLists.txt
tcp_echo_server/include/: tcp_echo_server.h
tcp_echo_server/src/: tcp_echo_server.c
tls_proxy/: CMakeLists.txt  README.md
tls_proxy/include/: tls_proxy.h
tls_proxy/src/: proxy.c  proxy_api.c  proxy_backend.c  proxy_connection.c  proxy_management.c  tls_proxy.c
tls_proxy/src/priv_include/: proxy.h  proxy_backend.h  proxy_connection.h  proxy_management.h
